--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,16 @@
       <artifactId>poi-ooxml</artifactId>
       <version>3.17</version>
     </dependency>
+    <dependency>
+      <groupId>log4j</groupId>
+      <artifactId>log4j</artifactId>
+      <version>1.2.17</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <version>3.8.1</version>
+    </dependency>
   </dependencies>
 
   <build>
